Fix scrollbars in #maindiv overlapping with its content
Closes #5874

--- a/UI/css/system/global.css
+++ b/UI/css/system/global.css
@@ -82,7 +82,7 @@ body {
     vertical-align: top;
 }
 
-#maindiv {
+#maindiv > * {
     overflow-x: auto;
     overflow-y: auto;
 }
